--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -9,7 +9,7 @@
             <a href="{{ url_for('user', username=post.author.username) }}">
                 {{ post.author.username.capitalize() }}
             </a>
-            says:
+            said {{ moment(post.timestamp).fromNow() }}:
             <br>
             {{ post.body }}
         </td>
