--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,13 +2,13 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}  
-    <h1>Hi, {{ current_user.username.capitalize() }}!</h1>
+    <h1>{{ _('Hi, %(username)s!', username=current_user.username.capitalize()) }}</h1>
     {% if form %}
     <div class="row">
-    <div class="col-md-4">
-      {{ wtf.quick_form(form) }}
+        <div class="col-md-4">
+        {{ wtf.quick_form(form) }}
+        </div>
     </div>
-  </div>
     {% endif %}
     {% for post in posts %}
         {% include '_post.html' %}
@@ -17,12 +17,10 @@
         <ul class="pager">
             <li class="previous{% if not prev_url %} disabled{% endif %}">
                 <a href="{{ prev_url or '#' }}">
-                    <span aria-hidden="true">&larr;</span> Newer posts
-                </a>
+                    <span aria-hidden="true">&larr;</span>{{ _('Newer posts') }}</a>
             </li>
             <li class="next{% if not next_url %} disabled{% endif %}">
-                <a href="{{ next_url or '#' }}">
-                    Older posts <span aria-hidden="true">&rarr;</span>
+                <a href="{{ next_url or '#' }}">{{ _('Older posts') }}<span aria-hidden="true">&rarr;</span>
                 </a>
             </li>
         </ul>
